hide dorn and bring back the dashboard buttons

--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -25,7 +25,7 @@ template(name='dao')
                 +view_mode k='stackexchange' i='stack exchange disabled'
                 // +view_mode k='github' i='github disabled'
                 // +view_mode k='alpha' i='disabled brain'
-                +view_mode k='porn' i='mercury'
+                // +view_mode k='porn' i='mercury'
                 // +view_mode k='bitcoin' i='bitcoin disabled'
                 // +view_mode k='covid' i='covid disabled'
                 // .ui.header 
