--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -8,15 +8,15 @@ template(name='nav')
                 i.large.yin.yang.grey.icon
             a.icon.item.zoomer(href='/web' class="{{isActivePath '/web'}}")
                 i.large.globe.grey.icon
-            a.icon.disabled.item.zoomer(href='/tribes' class="{{isActivePath '/tribes'}}")
+            a.icon.item.zoomer(href='/tribes' class="{{isActivePath '/tribes'}}")
                 i.large.fire.grey.icon
-            // a.icon.disabled.item.zoomer(href='/reddit' class="{{isActivePath '/reddit'}}")
+            // a.icon.item.zoomer(href='/reddit' class="{{isActivePath '/reddit'}}")
             //     i.large.reddit.grey.icon
-            // a.icon.disabled.item.zoomer(href='/stack' class="{{isActivePath '/stack'}}")
+            // a.icon.item.zoomer(href='/stack' class="{{isActivePath '/stack'}}")
             //     i.large.stack.exchange.grey.icon
-            // a.icon.disabled.item.zoomer(href='/wikipedia' class="{{isActivePath '/wikipedia'}}")
+            // a.icon.item.zoomer(href='/wikipedia' class="{{isActivePath '/wikipedia'}}")
             //     i.large.wikipedia.grey.icon
-            a.icon.disabled.item.zoomer(href='/questions' class="{{isActivePath '/questions'}}")
+            a.icon.item.zoomer(href='/questions' class="{{isActivePath '/questions'}}")
                 i.large.question.grey.icon
             a.icon.item.zoomer(href='/m/model' class="{{isActivePath '/m/model'}}")
                 i.large.database.grey.icon
@@ -192,42 +192,42 @@ template(name='rightbar')
         // a.item.toggle_rightbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
         //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
         //     |#{currentUser.name}
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
             | dashboard (#{currentUser.points}p)
             i.large.dashboard.icon
         
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
             | about
             i.large.info.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
             | #{currentUser.total_credit_amount}p received
             i.large.chevron.down.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
             | #{currentUser.total_debit_amount}k out
             i.large.chevron.up.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
             | events
             i.large.calendar.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
             | requests
             i.large.concierge.bell.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
             | orders
             i.large.cart.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
             | offers
             i.large.hand.holding.heart.icon
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
             | chat
             i.chat.icon
         .ui.divider
-        a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
+        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
             i.cog.large.icon
             |settings
-        a.item.toggle_nightmode.toggle_rightbar(href="#")
+        a.zoomer.item.toggle_nightmode.toggle_rightbar(href="#")
             i.lightbulb.large.icon
             |dark mode
-        a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
+        a.zoomer.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
             |logout
             if is_logging_out
                 i.refresh.loading.icon
@@ -285,16 +285,16 @@ template(name='leftbar')
             i.large.dollar.icon
             |expenses            
         .divider
-        a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+        a.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
             | chat
             i.chat.icon
-        a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+        a.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
             |leads
             i.telephone.icon
         a.item.toggle_leftbar(href="/projects" class="{{isActivePath '/projects'}}" title='chat') 
             |projects
             i.tasks.icon
-        a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+        a.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
             |invoices
             i.invoice.icon
         if is_eric
