some improved chatpop, no alpha

--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -10,6 +10,10 @@ template(name='nav')
                 i.large.globe.grey.icon
             a.icon.item.zoomer(href='/tribes' class="{{isActivePath '/tribes'}}")
                 i.large.fire.grey.icon
+            .ui.item
+                .ui.icon.input
+                    i.grey.lightning.icon
+                    input(type='text' placeholder='quick thought')
             // a.icon.item.zoomer(href='/reddit' class="{{isActivePath '/reddit'}}")
             //     i.large.reddit.grey.icon
             // a.icon.item.zoomer(href='/stack' class="{{isActivePath '/stack'}}")
