--- a/parts/client/profile.jade
+++ b/parts/client/profile.jade
@@ -255,7 +255,7 @@ template(name='user_dashboard')
                                 |#{when}
     .ui.stackable.padded.grid
         .eight.wide.column
-            .ui.comments.smallscroll
+            .ui.comments.medscroll
                 .ui.icon.fluid.inverted.input
                     i.plus.icon
                     input.add_post(type='text' placeholder='add post...')
