--- a/parts/client/profile.jade
+++ b/parts/client/profile.jade
@@ -34,33 +34,33 @@ template(name='profile')
                         if is_dev
                             +print_this
                         .ui.vertical.fluid.menu
-                            a.zoomer.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
-                                i.dashboard.icon
-                                |dashboard
-                            a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
-                                i.calendar.icon
-                                |events
-                            a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_debits'}}")
-                                i.users.icon
-                                |friends
-                            a.zoomer.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
-                                i.money.icon
-                                |debits
-                            a.zoomer.item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}")
-                                i.money.icon
-                                |credits
-                            a.zoomer.item(href="/u/#{username}/questions" class="{{isActiveRoute 'user_questions'}}")
-                                i.question.icon
-                                |quesions
-                            a.zoomer.item(href="/u/#{username}/answers" class="{{isActiveRoute 'user_answers'}}")
-                                i.money.icon
-                                |answers
-                            a.zoomer.item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}")
-                                i.fire.icon
-                                |tribes
-                            a.zoomer.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
-                                i.money.icon
-                                |overlap
+                            // a.zoomer.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
+                            //     i.dashboard.icon
+                            //     |dashboard
+                            // a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
+                            //     i.calendar.icon
+                            //     |events
+                            // a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_debits'}}")
+                            //     i.users.icon
+                            //     |friends
+                            // a.zoomer.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
+                            //     i.money.icon
+                            //     |debits
+                            // a.zoomer.item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}")
+                            //     i.money.icon
+                            //     |credits
+                            // a.zoomer.item(href="/u/#{username}/questions" class="{{isActiveRoute 'user_questions'}}")
+                            //     i.question.icon
+                            //     |quesions
+                            // a.zoomer.item(href="/u/#{username}/answers" class="{{isActiveRoute 'user_answers'}}")
+                            //     i.money.icon
+                            //     |answers
+                            // a.zoomer.item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}")
+                            //     i.fire.icon
+                            //     |tribes
+                            // a.zoomer.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
+                            //     i.money.icon
+                            //     |overlap
                             .divider
                             if i_have_points
                                 a.item.send(title='send points')
@@ -120,32 +120,32 @@ template(name='profile')
                         //         .item 10
                         //         .item 20
                         
-                        +skve k='profile_section' v='dashboard' l='dashboard' i='dashboard'
-                        +skve k='profile_section' v='friends' l='friends' i='groups'
-                        +skve k='profile_section' v='finance' l='finance' i='money'
-                        +skve k='profile_section' v='posts' l='posts' i='blog'
-                        +skve k='profile_section' v='tribes' l='tribes' i='campfire'
-                        +skve k='profile_section' v='questions' l='questions' i='faq'
-                        +skve k='profile_section' v='answers' l='answers' i='rss'
-                        +skve k='profile_section' v='overlap' l='overlap' i='exchange'
-                        +skve k='profile_section' v='privacy' l='privacy' i='lock'
-                        +skve k='profile_section' v='debits' l='debits' i='initiate-money-transfer'
-                        +skve k='profile_section' v='credits' l='credits' i='deposit'
-                        if skv_is 'profile_section' 'dashboard'
-                            .ui.header #{points_earned}pts earned
-                            +user_dashboard
-                        else if skv_is 'profile_section' 'friends'
-                            .ui.header friends
-                        else if skv_is 'profile_section' 'authored_overlap'
-                            +authored_overlap
-                        else if skv_is 'profile_section' 'debits'
-                            +user_debits
-                        else if skv_is 'profile_section' 'privacy'
-                            +edit_privacy
-                        else if skv_is 'profile_section' 'alerts'
-                            +alerts
-                        else if skv_is 'profile_section' 'finance'
-                            .ui.header finance
+                        // +skve k='profile_section' v='dashboard' l='dashboard' i='dashboard'
+                        // +skve k='profile_section' v='friends' l='friends' i='groups'
+                        // +skve k='profile_section' v='finance' l='finance' i='money'
+                        // +skve k='profile_section' v='posts' l='posts' i='blog'
+                        // +skve k='profile_section' v='tribes' l='tribes' i='campfire'
+                        // +skve k='profile_section' v='questions' l='questions' i='faq'
+                        // +skve k='profile_section' v='answers' l='answers' i='rss'
+                        // +skve k='profile_section' v='overlap' l='overlap' i='exchange'
+                        // +skve k='profile_section' v='privacy' l='privacy' i='lock'
+                        // +skve k='profile_section' v='debits' l='debits' i='initiate-money-transfer'
+                        // +skve k='profile_section' v='credits' l='credits' i='deposit'
+                        // if skv_is 'profile_section' 'dashboard'
+                        //     .ui.header #{points_earned}pts earned
+                        //     +user_dashboard
+                        // else if skv_is 'profile_section' 'friends'
+                        //     .ui.header friends
+                        // else if skv_is 'profile_section' 'authored_overlap'
+                        //     +authored_overlap
+                        // else if skv_is 'profile_section' 'debits'
+                        //     +user_debits
+                        // else if skv_is 'profile_section' 'privacy'
+                        //     +edit_privacy
+                        // else if skv_is 'profile_section' 'alerts'
+                        //     +alerts
+                        // else if skv_is 'profile_section' 'finance'
+                        //     .ui.header finance
                         +yield
     +chatpop
               
@@ -175,84 +175,84 @@ template(name='user_dashboard')
     // +user_about
     // .ui.hidden.divider
     .ui.stackable.four.column.grid
-        .column
-            .ui.inline.header 
-                +icon n='deposit'
-                |#{total_credit_amount}p
-                |received
-                .ui.basic.label #{credit_count} credits
-                    | ##{global_credit_count_rank}
-            .scrolling
-                each user_credits
-                    .ui.segment
-                        if author.profile_image_id
-                            img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                        .content
-                            .header
-                                strong #{amount}pt 
-                                |from 
-                                a(href="/u/#{author.username}")
-                                    |#{author.username}
-                            .description
-                                a(href="/debit/#{_id}/view")
-                                    |#{when}
-                        .content
-                            .description
-                                |#{description}
-                                each tags
-                                    .ui.mini.basic.label #{this}
-        .column
-            .ui.inline.spaced.header 
-                +icolor n='filled-sent' 
-                |#{total_send_amount}p
-                |sent
-                small(title='send count') (#{send_count}x)
-                    .ui.label ##{global_send_count_rank}
-            div
-            .scrolling
-                each user_debits
-                    .ui.segment
-                        a(href="/debit/#{_id}/view")
-                            if recipient.profile_image_id
-                                img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                            .header
-                                strong #{amount}pt
-                                |#{when}
-                                | to 
-                                a(href="/u/#{recipient.username}")
-                                    |#{recipient.username}
-                            .description
-                                |#{description}
-                                each tags
-                                    .ui.mini.label #{this}
-                                if is_admin
-                                    +remove_button
-        .column
-            .ui.header 
-                // i.hand.holding.heart.icon
-                +icolor n='request-service'
-                |requests
-            .smallscroll
-                each user_requests
-                    a(href="/request/#{_id}/view")
-                        .ui.segment
-                            .header #{point_bounty}pts: #{title}
-                            |#{description}
-                            |status: #{status}
-                            if complete 
-                                |completed by #{completer.name}
-        .column
-            .ui.header 
-                +icolor n='calendar' cl='ui inline spaced image'
-                |events
-            .smallscroll
-                each user_event_tickets
-                    a(href="/event/#{event_id}/view")
-                        .ui.segment
-                            .header #{ticket_event.title}
-                                |#{_author.username}
-                                |#{description}
-                                |#{when}
+        // .column
+        //     .ui.inline.header 
+        //         +icon n='deposit'
+        //         |#{total_credit_amount}p
+        //         |received
+        //         .ui.basic.label #{credit_count} credits
+        //             | ##{global_credit_count_rank}
+        //     .scrolling
+        //         each user_credits
+        //             .ui.segment
+        //                 if author.profile_image_id
+        //                     img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+        //                 .content
+        //                     .header
+        //                         strong #{amount}pt 
+        //                         |from 
+        //                         a(href="/u/#{author.username}")
+        //                             |#{author.username}
+        //                     .description
+        //                         a(href="/debit/#{_id}/view")
+        //                             |#{when}
+        //                 .content
+        //                     .description
+        //                         |#{description}
+        //                         each tags
+        //                             .ui.mini.basic.label #{this}
+        // .column
+        //     .ui.inline.spaced.header 
+        //         +icolor n='filled-sent' 
+        //         |#{total_send_amount}p
+        //         |sent
+        //         small(title='send count') (#{send_count}x)
+        //             .ui.label ##{global_send_count_rank}
+        //     div
+        //     .scrolling
+        //         each user_debits
+        //             .ui.segment
+        //                 a(href="/debit/#{_id}/view")
+        //                     if recipient.profile_image_id
+        //                         img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+        //                     .header
+        //                         strong #{amount}pt
+        //                         |#{when}
+        //                         | to 
+        //                         a(href="/u/#{recipient.username}")
+        //                             |#{recipient.username}
+        //                     .description
+        //                         |#{description}
+        //                         each tags
+        //                             .ui.mini.label #{this}
+        //                         if is_admin
+        //                             +remove_button
+        // .column
+        //     .ui.header 
+        //         // i.hand.holding.heart.icon
+        //         +icolor n='request-service'
+        //         |requests
+        //     .smallscroll
+        //         each user_requests
+        //             a(href="/request/#{_id}/view")
+        //                 .ui.segment
+        //                     .header #{point_bounty}pts: #{title}
+        //                     |#{description}
+        //                     |status: #{status}
+        //                     if complete 
+        //                         |completed by #{completer.name}
+        // .column
+        //     .ui.header 
+        //         +icolor n='calendar' cl='ui inline spaced image'
+        //         |events
+        //     .smallscroll
+        //         each user_event_tickets
+        //             a(href="/event/#{event_id}/view")
+        //                 .ui.segment
+        //                     .header #{ticket_event.title}
+        //                         |#{_author.username}
+        //                         |#{description}
+        //                         |#{when}
     .ui.stackable.padded.grid
         .eight.wide.column
             .ui.comments.medscroll
@@ -262,49 +262,49 @@ template(name='user_dashboard')
                 each latest_posts
                     +post_segment
         .eight.wide.column
-            .ui.segment
-                .ui.header 
-                    |quick send
-                if is_current_user
-                    each friends 
-                        a.profile_nav_item(href="/u/#{username}" title=username)
-                            if profile_image_id
-                                img.ui.mini.inline.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
-                            else
-                                .ui.label #{initials}
-                else
-                    .ui.button.tip
-                        |+1
-            each income
-                .ui.tiny.header #{amount} #{_author.username}
-            +user_topups
-            .ui.segment
-                .ui.header questions
-                .ui.icon.button.ask_question
-                    i.plus.icon
-                if asking_question
-                    with question_asking
-                        +text_edit k='title' d=true
-                        +number_edit k='bounty' d=true 
-                        .ui.button.save_question
-                            i.checkmark.icon
-                        +remove_button
-                each questions_asked
-                    .ui.segment.select_question
-                        a.ui.pointer.header q:#{title}
-                        .ui.label #{bounty}pts
+            // .ui.segment
+            //     .ui.header 
+            //         |quick send
+            //     if is_current_user
+            //         each friends 
+            //             a.profile_nav_item(href="/u/#{username}" title=username)
+            //                 if profile_image_id
+            //                     img.ui.mini.inline.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+            //                 else
+            //                     .ui.label #{initials}
+            //     else
+            //         .ui.button.tip
+            //             |+1
+            // each income
+            //     .ui.tiny.header #{amount} #{_author.username}
+            // +user_topups
+            // .ui.segment
+            //     .ui.header questions
+            //     .ui.icon.button.ask_question
+            //         i.plus.icon
+            //     if asking_question
+            //         with question_asking
+            //             +text_edit k='title' d=true
+            //             +number_edit k='bounty' d=true 
+            //             .ui.button.save_question
+            //                 i.checkmark.icon
+            //             +remove_button
+            //     each questions_asked
+            //         .ui.segment.select_question
+            //             a.ui.pointer.header q:#{title}
+            //             .ui.label #{bounty}pts
                         
-            .ui.header 
-                i.big.money.icon(title='log events')
-                |earnings
-            .ui.header #{points} points
-            i.big.rss.icon(title='log events')
-            .ui.large.list
-                each log_events
-                    .item 
-                        .content
-                            .header #{body}
-                            .meta #{_when}
+            // .ui.header 
+            //     i.big.money.icon(title='log events')
+            //     |earnings
+            // .ui.header #{points} points
+            // i.big.rss.icon(title='log events')
+            // .ui.large.list
+            //     each log_events
+            //         .item 
+            //             .content
+            //                 .header #{body}
+            //                 .meta #{_when}
            
            
            
