--- a/parts/client/profile.jade
+++ b/parts/client/profile.jade
@@ -27,13 +27,13 @@ template(name='profile')
                                 i.big.cog.pointer.icon
                         if is_dev
                             .ui.small.inline.header #{_id}
-                        unless is_current_user
-                            if currentUser
-                                // div
-                                +user_friend_button 
+                        // unless is_current_user
+                        //     if currentUser
+                        //         // div
+                        //         +user_friend_button 
                         if is_dev
                             +print_this
-                        .ui.vertical.fluid.menu
+                        // .ui.vertical.fluid.menu
                             // a.zoomer.item(href="/u/#{username}" class="{{isActiveRoute 'user_debits'}}")
                             //     i.dashboard.icon
                             //     |dashboard
@@ -61,11 +61,11 @@ template(name='profile')
                             // a.zoomer.item(href="/u/#{username}/overlap" class="{{isActiveRoute 'user_overlap'}}")
                             //     i.money.icon
                             //     |overlap
-                            .divider
-                            if i_have_points
-                                a.item.send(title='send points')
-                                    i.gift.icon
-                                    span send pts
+                            // .divider
+                            // if i_have_points
+                            //     a.item.send(title='send points')
+                            //         i.gift.icon
+                            //         span send pts
                                 // .ui.button.request(title='request points')
                                 //     i.concierge.bell.teal.icon
                                 //     span request
@@ -88,26 +88,26 @@ template(name='profile')
                             //         |log out
                             
             
-                        .ui.fluid.dropdown.button
-                            i.users.icon
-                            | #{friends.count} friends
-                            .menu 
-                                each friends
-                                    a.item(href="/u/#{username}" title=username)
-                                        if profile_image_id
-                                            img.ui.avatar.invert.image(src="{{c.url profile_image_id height=500 width=300 gravity='face' crop='fill'}}")
-                                        // else
-                                        //     .ui.label.image #{initials}
-                                        | #{username}
-                        .ui.selection.link.list.smallscroll
-                            each friends
-                                a.item(href="/u/#{username}" title=username)
-                                    if profile_image_id
-                                        img.ui.avatar.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
-                                    else
-                                        .ui.label.image #{initials}
-                                    .content
-                                        .header #{username}
+                        // .ui.fluid.dropdown.button
+                        //     i.users.icon
+                        //     | #{friends.count} friends
+                        //     .menu 
+                        //         each friends
+                        //             a.item(href="/u/#{username}" title=username)
+                        //                 if profile_image_id
+                        //                     img.ui.avatar.invert.image(src="{{c.url profile_image_id height=500 width=300 gravity='face' crop='fill'}}")
+                        //                 // else
+                        //                 //     .ui.label.image #{initials}
+                        //                 | #{username}
+                        // .ui.selection.link.list.smallscroll
+                        //     each friends
+                        //         a.item(href="/u/#{username}" title=username)
+                        //             if profile_image_id
+                        //                 img.ui.avatar.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                        //             else
+                        //                 .ui.label.image #{initials}
+                        //             .content
+                        //                 .header #{username}
                     .twelve.wide.column 
                         // .ui.dropdown
                         //     span.text dropdown
@@ -174,7 +174,7 @@ template(name='user_rentals')
 template(name='user_dashboard')
     // +user_about
     // .ui.hidden.divider
-    .ui.stackable.four.column.grid
+    // .ui.stackable.four.column.grid
         // .column
         //     .ui.inline.header 
         //         +icon n='deposit'
@@ -255,8 +255,8 @@ template(name='user_dashboard')
         //                         |#{when}
     .ui.stackable.padded.grid
         .sixteen.wide.column
-            .ui.comments.medscroll
-                .ui.icon.fluid.inverted.input
+            .ui.comments
+                .ui.icon.fluid.inverted.large.input
                     i.plus.icon
                     input.add_post(type='text' placeholder='add post...')
                 each latest_posts
@@ -340,10 +340,12 @@ template(name='post_segment')
                     // i.reply.link.grey.icon
                     a.remove_post
                         i.remove.link.grey.icon
-        if alpha_response
-            .ui.small.grey.header
+                +array_edit k='tags' l='tags' d=true
+        with alpha_response
+            .ui.small.grey.inline.header
                 i.brain.icon
-                |#{alpha_response.response.result}
+                |#{response.result}
+            +voting_small
                 // i.archive.link.grey.icon
                 // i.share.grey.icon
                 // +emotion_picker
